fix: replace margins with gap in login page

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -7,7 +7,8 @@
     --main-color: #FFFFFF;
     --text-color: #5A5A5A;
     --title-color: #464646;
-    --gradient-up-color: rgba(255, 255, 255, .66);
+    --gradient-up-color: rgba(255, 255, 255, 0);
+    --gradient-middle-color: rgba(255, 255, 255, 0.82);
     --gradient-down-color: rgba(255, 255, 255, 1);
     --border-color: #BEC1CA;
 
@@ -17,7 +18,7 @@
     --title-font-size: 3.2rem;
     --normal-font-size: 1.6rem;
     --small-lbl-font-size: 1.4rem;
-    --title-line-hight: 5.2rem;
+    --title-line-hight: 4.8rem;
     --big-line-hight: 3.2rem;
     --normal-line-hight: 2.8rem;
     --small-line-hight: 1.6rem;
@@ -58,17 +59,18 @@ body {
 
 /* ========== Form ========== */
 .form-container {
+    display: flex;
+    flex-direction: column;
     width: 532px;
-    /* height: 732px; */
-    padding: 47px 60px 0;
+    padding: 47px 60px 40px;
     background-color: var(--main-color);
     text-align: center;
     border-radius: 24px;
-    background-image: url("../images/login_background.svg");
+    background-image: linear-gradient(var(--gradient-up-color) 56%, var(--gradient-middle-color) 1%, var(--gradient-down-color)), url("../images/login_background.svg");
     background-repeat: no-repeat;
     background-position-x: center;
     overflow: hidden;
-    /* position: relative; */
+    gap: 16px;
 }
 
 .reverse-content {
@@ -78,7 +80,6 @@ body {
 
 .form-title {
     margin: 0;
-    height: 52px;
     font-size: var(--title-font-size);
     line-height: var(--title-line-hight);
     font-weight: bold;
@@ -94,6 +95,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 28px;
 }
 
 .form-fields input[type="email"],
@@ -112,7 +114,6 @@ body {
 
 .form-fields input[type="submit"] {
     border-radius: 20px;
-    margin-bottom: 16px;
     background-color: var(--primary-btn-color);
     color: var(--primary-btn-text-color);
     border-style: none;
@@ -123,24 +124,25 @@ body {
     height: 56px;
 }
 
-.inputs-container {
-    background: linear-gradient(var(--gradient-up-color), var(--gradient-down-color));
-    padding-bottom: 42px;
-    padding-top: 10px;
+.register-link {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
 }
 
-.register-link {
+.register-link a {
+    color: var(--title-color);
     text-decoration: none;
     font-weight: var(--font-semi-bold);
-    color: var(--title-color);
-    padding-right: 12px;
 }
 
-.register-link:hover {
+.register-link a:hover {
     text-decoration: underline;
 }
 
-.form-container p {
+.register-link p {
     color: var(--text-color);
     line-height: var(--big-line-hight);
 }
@@ -150,22 +152,22 @@ body {
     flex-direction: row;
     border-radius: 16px;
     border: 1px solid var(--border-color);
-    margin-bottom: 28px;
     align-items: center;
     overflow: hidden;
     width: 312px;
     height: 56px;
     justify-content: right;
     padding: 8px;
+    gap: 8px;
 }
 
 .input-container img {
-    margin: 4px 0 4px 8px;
+    margin: 4px 0 4px 0;
 }
 
 .input-container .hidden-password {
     cursor: pointer;
-    margin: 4px 8px 4px 0;
+    margin: 4px 0 4px 0;
 }
 
 .input-container div {
@@ -183,6 +185,7 @@ body {
     position: absolute;
     bottom: 0;
     right: 0;
+    padding-top: 16px;
     background-color: rgba(0, 0, 0, 0);
     height: 100%;
     width: 100%;
